@@ -77,10 +77,20 @@
 				<type>jar</type>
 			</dependency>
 
+			<!-- Wildfly dependencies -->
 			<dependency>
 				<groupId>org.wildfly.bom</groupId>
 				<artifactId>jboss-javaee-7.0-with-all</artifactId>
 				<version>8.2.2.Final</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<!-- Spring dependencies -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-framework-bom</artifactId>
+				<version>4.2.6.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -206,17 +216,19 @@
 
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>maven-jetty-plugin</artifactId>
-					<version>6.1.25</version>
-					<!--executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase> 
-						<goals> <goal>run-forked</goal> </goals> </execution> </executions -->
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>8.1.16.v20140903</version>
 					<configuration>
-						<jvmArgs>-Xmx2048m -Xms1536m -XX:PermSize=128m
-							-XX:MaxPermSize=256m</jvmArgs>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<webApp>
 							<contextPath>/</contextPath>
 						</webApp>
+						<connectors>
+							<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+								<port>9090</port>
+								<maxIdleTime>60000</maxIdleTime>
+							</connector>
+						</connectors>
 					</configuration>
 				</plugin>
 
